[package]
name = "rust-iot"
version = "0.1.0"
authors = ["Gints Polis <polis.gints@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
] }
embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv6", "log", "dns"] }
embassy-time = "0.3.0"
esp-backtrace = { version = "0.11.1", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.16.1", features = [ "esp32c6", "embassy", "async", "embassy-executor-thread", "embassy-time-timg0" ] }
esp-println = { version = "0.9.0", default-features = false, features = ["esp32c6", "jtag-serial", "log"] }
esp-wifi = { version = "0.4.0", features = ["esp32c6", "async", "embassy-net", "wifi", "ipv6"] }
static_cell = { version = "2.0", features = ["nightly"] }

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
